content/nomad/v1.10.x/content/plugins/author/index.mdx
---
# Copyright (c) 2024 HashiCorp, Inc.
# Nomad and the Nomad logo are trademarks of HashiCorp.
#
# Documentation licensed under the Business Source License, Version 1.1.
# The original work was translated from English into Brazilian Portuguese.
# https://github.com/hashicorp/nomad/blob/-/LICENSE

layout: docs
page_title: Nomad plugin authoring guide
description: >-
  Expand Nomad functionality by authoring your own plugins.
---

# Nomad plugin authoring guide

Nomad implements a plugin framework that lets you extend the functionality of
some components within Nomad. The design of the plugin system is inspired by the
lessons learned from plugin systems implemented in other HashiCorp products such
as Terraform and Vault.

The following components are currently pluggable within Nomad:

- [Device](/nomad/plugins/author/device): Extend workload functionality with a
  custom hardware device.
- [Host volume](/nomad/plugins/author/host-volume): Extend workload storage
  functionality with a plugin specific to your local storage environment.
- [Task driver](/nomad/plugins/author/task-driver): Extend task execution
  functionality with a custom task driver.

## Architecture

The Nomad task driver and device plugin framework uses the [go-plugin][goplugin]
project to expose a language-independent plugin interface. Plugins implement a
set of gRPC services and methods that Nomad manages by running the plugin and
calling the implemented RPCs. As a result, plugins are free to be implemented
in the author's language of choice. To facilitate plugin development, a set of
Go interfaces and structs exist for each plugin type that abstracts away
go-plugin and the gRPC interface. The guides in this documentation reference
these abstractions for ease of use.

[goplugin]: https://github.com/hashicorp/go-plugin
